<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="nanodegree">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="lib_app">LIBRARY APP</string>
    <string name="build_big">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_txt">This button will launch&#160;</string>
    <string name="action_settings">Settings</string>
</resources>
